# Office_Projects

./: .gitignore
New folder/: .env.example  README.md  alembic.ini  pyproject.toml
New folder/alembic/: env.py
New folder/app/: main.py
New folder/app/api/: deps.py
New folder/app/api/v1/: router.py
New folder/app/api/v1/endpoints/: scripts.py
New folder/app/core/: config.py  logging.py
New folder/app/db/: base.py  session.py
New folder/app/models/: __init__.py  audio.py  enums.py  job.py  mixins.py  script.py
New folder/app/schemas/: audio.py  common.py  job.py  script.py
New folder/app/services/: contracts.py  generation_service.py  pipeline_service.py  storage_service.py  tts_service.py
New folder/app/workers/: celery_app.py
New folder/app/workers/tasks/: scripts.py
SaimonVai/: test.html
Testing/: .env.example  README.md  requirements.txt
Testing/app/: __init__.py  main.py
Testing/app/core/: config.py
Testing/app/models/: __init__.py  episode.py
Testing/app/schemas/: __init__.py  episode.py
jenstemebel/: .gitignore  03_WhatsUpIn_AI_Powered_Personalized_Travel_Recommendation_Engine_Final.json  readme.md
michielstokman/: .env.example  .gitignore  CLIENT_SETUP_GUIDE.md  api_keys_docs.md  client_requirements.md  feedback_log.csv  readme.md  requirements.txt  rss_feed.xml  studio.db  test_tts.py  transform-to-liberation-ai-engineering-plan.md
michielstokman/ai-implementation/: README.md
michielstokman/ai-implementation-fastapi/: README.md
michielstokman/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
(+32 files in other folders)
